nerva_libwallet2_api_c/src/main/cpp/nerva_wallet2_api_c.h

//     virtual PendingTransaction * createTransaction(const std::string &dst_addr, const std::string &payment_id,
//                                                    optional<uint64_t> amount, uint32_t mixin_count,
//                                                    PendingTransaction::Priority = PendingTransaction::Priority_Low,
//                                                    uint32_t subaddr_account = 0,
//                                                    std::set<uint32_t> subaddr_indices = {},
//                                                    const std::set<std::string> &preferred_inputs = {) = 0;
extern ADDAPI void* NERVA_Wallet_createTransaction(void* wallet_ptr, const char* dst_addr, const char* payment_id,
                                                    uint64_t amount, uint32_t mixin_count,
                                                    int pendingTransactionPriority,
                                                    uint32_t subaddr_account,
                                                    const char* preferredInputs, const char* separator);
//     virtual PendingTransaction * createSweepUnmixableTransaction() = 0;
//     virtual UnsignedTransaction * loadUnsignedTx(const std::string &unsigned_filename) = 0;
extern ADDAPI void* NERVA_Wallet_loadUnsignedTx(void* wallet_ptr, const char* unsigned_filename);
//     virtual bool submitTransaction(const std::string &fileName) = 0;
extern ADDAPI bool NERVA_Wallet_submitTransaction(void* wallet_ptr, const char* fileName);
//     virtual void disposeTransaction(PendingTransaction * t) = 0;
//     virtual uint64_t estimateTransactionFee(const std::vector<std::pair<std::string, uint64_t>> &destinations,
//                                             PendingTransaction::Priority priority) const = 0;
//     virtual bool hasUnknownKeyImages() const = 0;
//     virtual bool exportKeyImages(const std::string &filename, bool all = false) = 0;
extern ADDAPI bool NERVA_Wallet_exportKeyImages(void* wallet_ptr, const char* filename);
//     virtual bool importKeyImages(const std::string &filename) = 0;
extern ADDAPI bool NERVA_Wallet_importKeyImages(void* wallet_ptr, const char* filename);
//     virtual bool exportOutputs(const std::string &filename, bool all = false) = 0;
//     virtual bool importOutputs(const std::string &filename) = 0;
//     virtual bool scanTransactions(const std::vector<std::string> &txids) = 0;
//     virtual bool setupBackgroundSync(const BackgroundSyncType background_sync_type, const std::string &wallet_password, const optional<std::string> &background_cache_password) = 0;
//     virtual BackgroundSyncType getBackgroundSyncType() const = 0;
//     virtual bool startBackgroundSync() = 0;
//     virtual bool stopBackgroundSync(const std::string &wallet_password) = 0;
//     virtual bool isBackgroundSyncing() const = 0;
//     virtual bool isBackgroundWallet() const = 0;
//     virtual TransactionHistory * history() = 0;
extern ADDAPI void* NERVA_Wallet_history(void* wallet_ptr);
//     virtual AddressBook * addressBook() = 0;
//     virtual Coins * coins() = 0;
//     virtual Subaddress * subaddress() = 0;
extern ADDAPI void* NERVA_Wallet_subaddress(void* wallet_ptr);
//     virtual SubaddressAccount * subaddressAccount() = 0;
extern ADDAPI void* NERVA_Wallet_subaddressAccount(void* wallet_ptr);
//     virtual void setListener(WalletListener *) = 0;
//     virtual uint32_t defaultMixin() const = 0;
//     virtual void setDefaultMixin(uint32_t arg) = 0;
//     virtual bool setCacheAttribute(const std::string &key, const std::string &val) = 0;
extern ADDAPI bool NERVA_Wallet_setCacheAttribute(void* wallet_ptr, const char* key, const char* val);
//     virtual std::string getCacheAttribute(const std::string &key) const = 0;
extern ADDAPI const char* NERVA_Wallet_getCacheAttribute(void* wallet_ptr, const char* key);
//     virtual bool setUserNote(const std::string &txid, const std::string &note) = 0;
extern ADDAPI bool NERVA_Wallet_setUserNote(void* wallet_ptr, const char* txid, const char* note);
//     virtual std::string getUserNote(const std::string &txid) const = 0;
extern ADDAPI const char* NERVA_Wallet_getUserNote(void* wallet_ptr, const char* txid);
//     virtual std::string getTxKey(const std::string &txid) const = 0;
extern ADDAPI const char* NERVA_Wallet_getTxKey(void* wallet_ptr, const char* txid);
//     virtual bool checkTxKey(const std::string &txid, std::string tx_key, const std::string &address, uint64_t &received, bool &in_pool, uint64_t &confirmations) = 0;
//     virtual std::string getTxProof(const std::string &txid, const std::string &address, const std::string &message) const = 0;
//     virtual bool checkTxProof(const std::string &txid, const std::string &address, const std::string &message, const std::string &signature, bool &good, uint64_t &received, bool &in_pool, uint64_t &confirmations) = 0;
//     virtual std::string getSpendProof(const std::string &txid, const std::string &message) const = 0;
//     virtual bool checkSpendProof(const std::string &txid, const std::string &message, const std::string &signature, bool &good) const = 0;
//     virtual std::string getReserveProof(bool all, uint32_t account_index, uint64_t amount, const std::string &message) const = 0;
//     virtual bool checkReserveProof(const std::string &address, const std::string &message, const std::string &signature, bool &good, uint64_t &total, uint64_t &spent) const = 0;
//     virtual std::string signMessage(const std::string &message, const std::string &address = "") = 0;
extern ADDAPI const char* NERVA_Wallet_signMessage(void* wallet_ptr, const char* message);
//     virtual bool verifySignedMessage(const std::string &message, const std::string &addres, const std::string &signature) const = 0;
extern ADDAPI bool NERVA_Wallet_verifySignedMessage(void* wallet_ptr, const char* message, const char* address, const char* signature);
//     virtual std::string signMultisigParticipant(const std::string &message) const = 0;
//     virtual bool verifyMessageWithPublicKey(const std::string &message, const std::string &publicKey, const std::string &signature) const = 0;
//     virtual bool parse_uri(const std::string &uri, std::string &address, std::string &payment_id, uint64_t &amount, std::string &tx_description, std::string &recipient_name, std::vector<std::string> &unknown_parameters, std::string &error) = 0;
//     virtual std::string make_uri(const std::string &address, const std::string &payment_id, uint64_t amount, const std::string &tx_description, const std::string &recipient_name, std::string &error) const = 0;
//     virtual std::string getDefaultDataDir() const = 0;
//     virtual bool rescanSpent() = 0;
extern ADDAPI bool NERVA_Wallet_rescanSpent(void* wallet_ptr);
//     virtual void setOffline(bool offline) = 0;
//     virtual bool isOffline() const = 0;
//     virtual bool blackballOutputs(const std::vector<std::string> &outputs, bool add) = 0;
//     virtual bool blackballOutput(const std::string &amount, const std::string &offset) = 0;
//     virtual bool unblackballOutput(const std::string &amount, const std::string &offset) = 0;
//     virtual bool getRing(const std::string &key_image, std::vector<uint64_t> &ring) const = 0;
//     virtual bool getRings(const std::string &txid, std::vector<std::pair<std::string, std::vector<uint64_t>>> &rings) const = 0;
//     virtual bool setRing(const std::string &key_image, const std::vector<uint64_t> &ring, bool relative) = 0;
//     virtual void segregatePreForkOutputs(bool segregate) = 0;
extern ADDAPI void NERVA_Wallet_segregatePreForkOutputs(void* wallet_ptr, bool segregate);
//     virtual void segregationHeight(uint64_t height) = 0;
extern ADDAPI void NERVA_Wallet_segregationHeight(void* wallet_ptr, uint64_t height);
//     virtual void keyReuseMitigation2(bool mitigation) = 0;
extern ADDAPI void NERVA_Wallet_keyReuseMitigation2(void* wallet_ptr, bool mitigation);