impls/monero.dart/lib/src/generated_bindings_nerva.g.dart


  ffi.Pointer<ffi.Void> NERVA_Wallet_createTransaction(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> dst_addr,
    ffi.Pointer<ffi.Char> payment_id,
    int amount,
    int mixin_count,
    int pendingTransactionPriority,
    int subaddr_account,
    ffi.Pointer<ffi.Char> preferredInputs,
    ffi.Pointer<ffi.Char> separator,
  ) {
    return _NERVA_Wallet_createTransaction(
      wallet_ptr,
      dst_addr,
      payment_id,
      amount,
      mixin_count,
      pendingTransactionPriority,
      subaddr_account,
      preferredInputs,
      separator,
    );
  }

  late final _NERVA_Wallet_createTransactionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.Uint32,
              ffi.Int,
              ffi.Uint32,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_createTransaction');
  late final _NERVA_Wallet_createTransaction =
      _NERVA_Wallet_createTransactionPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              int,
              int,
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Void> NERVA_Wallet_loadUnsignedTx(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> unsigned_filename,
  ) {
    return _NERVA_Wallet_loadUnsignedTx(
      wallet_ptr,
      unsigned_filename,
    );
  }

  late final _NERVA_Wallet_loadUnsignedTxPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_loadUnsignedTx');
  late final _NERVA_Wallet_loadUnsignedTx =
      _NERVA_Wallet_loadUnsignedTxPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  bool NERVA_Wallet_submitTransaction(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> fileName,
  ) {
    return _NERVA_Wallet_submitTransaction(
      wallet_ptr,
      fileName,
    );
  }

  late final _NERVA_Wallet_submitTransactionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_submitTransaction');
  late final _NERVA_Wallet_submitTransaction =
      _NERVA_Wallet_submitTransactionPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  bool NERVA_Wallet_exportKeyImages(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> filename,
  ) {
    return _NERVA_Wallet_exportKeyImages(
      wallet_ptr,
      filename,
    );
  }

  late final _NERVA_Wallet_exportKeyImagesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_exportKeyImages');
  late final _NERVA_Wallet_exportKeyImages =
      _NERVA_Wallet_exportKeyImagesPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  bool NERVA_Wallet_importKeyImages(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> filename,
  ) {
    return _NERVA_Wallet_importKeyImages(
      wallet_ptr,
      filename,
    );
  }

  late final _NERVA_Wallet_importKeyImagesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_importKeyImages');
  late final _NERVA_Wallet_importKeyImages =
      _NERVA_Wallet_importKeyImagesPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Void> NERVA_Wallet_history(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_history(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_historyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_Wallet_history');
  late final _NERVA_Wallet_history = _NERVA_Wallet_historyPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> NERVA_Wallet_subaddress(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_subaddress(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_subaddressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_Wallet_subaddress');
  late final _NERVA_Wallet_subaddress = _NERVA_Wallet_subaddressPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> NERVA_Wallet_subaddressAccount(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_subaddressAccount(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_subaddressAccountPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_Wallet_subaddressAccount');
  late final _NERVA_Wallet_subaddressAccount =
      _NERVA_Wallet_subaddressAccountPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>();

  bool NERVA_Wallet_setCacheAttribute(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> val,
  ) {
    return _NERVA_Wallet_setCacheAttribute(
      wallet_ptr,
      key,
      val,
    );
  }

  late final _NERVA_Wallet_setCacheAttributePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_setCacheAttribute');
  late final _NERVA_Wallet_setCacheAttribute =
      _NERVA_Wallet_setCacheAttributePtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_getCacheAttribute(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _NERVA_Wallet_getCacheAttribute(
      wallet_ptr,
      key,
    );
  }

  late final _NERVA_Wallet_getCacheAttributePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_getCacheAttribute');
  late final _NERVA_Wallet_getCacheAttribute =
      _NERVA_Wallet_getCacheAttributePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  bool NERVA_Wallet_setUserNote(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> txid,
    ffi.Pointer<ffi.Char> note,
  ) {
    return _NERVA_Wallet_setUserNote(
      wallet_ptr,
      txid,
      note,
    );
  }

  late final _NERVA_Wallet_setUserNotePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_setUserNote');
  late final _NERVA_Wallet_setUserNote =
      _NERVA_Wallet_setUserNotePtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_getUserNote(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> txid,
  ) {
    return _NERVA_Wallet_getUserNote(
      wallet_ptr,
      txid,
    );
  }

  late final _NERVA_Wallet_getUserNotePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_getUserNote');
  late final _NERVA_Wallet_getUserNote =
      _NERVA_Wallet_getUserNotePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_getTxKey(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> txid,
  ) {
    return _NERVA_Wallet_getTxKey(
      wallet_ptr,
      txid,
    );
  }

  late final _NERVA_Wallet_getTxKeyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_getTxKey');
  late final _NERVA_Wallet_getTxKey = _NERVA_Wallet_getTxKeyPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_signMessage(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _NERVA_Wallet_signMessage(
      wallet_ptr,
      message,
    );
  }

  late final _NERVA_Wallet_signMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_signMessage');
  late final _NERVA_Wallet_signMessage =
      _NERVA_Wallet_signMessagePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  bool NERVA_Wallet_verifySignedMessage(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> address,
    ffi.Pointer<ffi.Char> signature,
  ) {
    return _NERVA_Wallet_verifySignedMessage(
      wallet_ptr,
      message,
      address,
      signature,
    );
  }

  late final _NERVA_Wallet_verifySignedMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_verifySignedMessage');
  late final _NERVA_Wallet_verifySignedMessage =
      _NERVA_Wallet_verifySignedMessagePtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  bool NERVA_Wallet_rescanSpent(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_rescanSpent(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_rescanSpentPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_rescanSpent');
  late final _NERVA_Wallet_rescanSpent = _NERVA_Wallet_rescanSpentPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  void NERVA_Wallet_segregatePreForkOutputs(
    ffi.Pointer<ffi.Void> wallet_ptr,
    bool segregate,
  ) {
    return _NERVA_Wallet_segregatePreForkOutputs(
      wallet_ptr,
      segregate,
    );
  }

  late final _NERVA_Wallet_segregatePreForkOutputsPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool)>>(
      'NERVA_Wallet_segregatePreForkOutputs');
  late final _NERVA_Wallet_segregatePreForkOutputs =
      _NERVA_Wallet_segregatePreForkOutputsPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, bool)>();

  void NERVA_Wallet_segregationHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int height,
  ) {
    return _NERVA_Wallet_segregationHeight(
      wallet_ptr,
      height,
    );
  }

  late final _NERVA_Wallet_segregationHeightPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Uint64)>>('NERVA_Wallet_segregationHeight');
  late final _NERVA_Wallet_segregationHeight =
      _NERVA_Wallet_segregationHeightPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, int)>();

  void NERVA_Wallet_keyReuseMitigation2(
    ffi.Pointer<ffi.Void> wallet_ptr,
    bool mitigation,
  ) {
    return _NERVA_Wallet_keyReuseMitigation2(
      wallet_ptr,
      mitigation,
    );
  }
